@@ -7,6 +7,7 @@ import static org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_
 import static org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Properties;
 
 import org.apache.kafka.clients.consumer.KafkaConsumer;
@@ -18,8 +19,9 @@ import lombok.RequiredArgsConstructor;
 public class KafkaConfig {
 
   public static final String DESERIALIZATION_STRING_DESERIALIZER = "org.apache.kafka.common.serialization.StringDeserializer";
+  public static final String DESERIALIZATION_LONG_DESERIALIZER = "org.apache.kafka.common.serialization.LongDeserializer";
 
-  static KafkaConsumer<String, String> createKafkaConsumer(AppConfig appConfig) {
+  static KafkaConsumer<String, String> createChuckKafkaConsumer(AppConfig appConfig) {
 
     Properties props = new Properties();
     props.put(BOOTSTRAP_SERVERS_CONFIG, appConfig.getBootstrapServers());
@@ -29,7 +31,22 @@ public class KafkaConfig {
     props.put(VALUE_DESERIALIZER_CLASS_CONFIG, DESERIALIZATION_STRING_DESERIALIZER);
 
     final KafkaConsumer<String, String> consumer = new KafkaConsumer<>(props);
-    consumer.subscribe(Collections.singletonList(appConfig.getChuckTopic()));
+    consumer.subscribe(List.of(appConfig.getChuckTopic()));
+
+    return consumer;
+  }
+
+  static KafkaConsumer<String, Long> createWordCountConsumer(AppConfig appConfig) {
+
+    Properties props = new Properties();
+    props.put(BOOTSTRAP_SERVERS_CONFIG, appConfig.getBootstrapServers());
+    props.put(CLIENT_ID_CONFIG, appConfig.getWordCountClientId());
+    props.put(GROUP_ID_CONFIG, appConfig.getWordCountGroupId());
+    props.put(KEY_DESERIALIZER_CLASS_CONFIG, DESERIALIZATION_STRING_DESERIALIZER);
+    props.put(VALUE_DESERIALIZER_CLASS_CONFIG, DESERIALIZATION_LONG_DESERIALIZER);
+
+    final KafkaConsumer<String, Long> consumer = new KafkaConsumer<>(props);
+    consumer.subscribe(Collections.singletonList(appConfig.getWordCountTopic()));
 
     return consumer;
   }
